guacamole-install/guacamole-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: guacamole
  namespace: guacamole
  labels:
    app: guacamole
spec:
  to:
    kind: Service
    name: guacamole
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: v1
kind: Service
metadata:
  name: guacamole-nodeport
  namespace: guacamole
  labels:
    app: guacamole
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
    name: http
  selector:
    app: guacamole
